Fixed image being cropped from the bottom

--- a/src/components/imageItem/snapImageStyles.css
+++ b/src/components/imageItem/snapImageStyles.css
@@ -27,7 +27,7 @@ display: inline-block;
     }
     .snap-item .first-subtitle{
         position: relative;
-        bottom: 110px;
+        bottom: 100px;
         left: 20px;
         z-index: 10;
     }
@@ -36,7 +36,7 @@ display: inline-block;
     }
     .snap-item .second-subtitle{
         position: relative;
-        bottom: 110px;
+        bottom: 100px;
         z-index: 10;
         display: flex;
         flex-direction: row;
